section mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -170,11 +170,16 @@ footer aside {
   }
 
   section {
-    padding: 20%;
+    padding: 0;
   }
 
-  section div, a {
-    padding: 40%;
+  section div {
+    flex-direction: column;
+  }
+
+  section div a {
+    width: 100%;
+    margin: 0 auto;
   }
 
   footer {
